Added completed task #2

--- a/Lesson_1_Strings/Pages/Numbers/Numbers.cshtml
+++ b/Lesson_1_Strings/Pages/Numbers/Numbers.cshtml
@@ -16,8 +16,12 @@
             Так же, чтобы в ответе был виден тип, необходимо использовать метод базового класса Object, GetType()<br /><br />
             Пример:<br />
 
+            <h5 class="text-center">Задание #1</h5>
+            Написать программу, которая будет принимать из 2-х полей для ввода 2 числа типа <span class="text-danger">byte</span>, складывать их и возвращать ответ в <span class="text-danger">int</span>.<br />
+
+
             <!--Создаём форму обработки запроса с методом POST и с явным указанием метода обработки (asp-page-handler)
-            Хочу подчеркнуть, что полное имя метода обработки OnPostExampleMethod, НО, перфикс OnPost мы опускаем-->
+        Хочу подчеркнуть, что полное имя метода обработки OnPostExampleMethod, НО, перфикс OnPost мы опускаем-->
             <!--Так же, научимся передавать параметры с помощью формы, без использования модели-->
             <form method="post" asp-page-handler="ExampleMethod" class="form-group">
                 <!--Создаём новый ряд методом Bootstrap-->
@@ -27,10 +31,10 @@
                         <!--Создаём лэйбл (текст) перед формой ввода-->
                         <label class="col-form-label mr-2">Введите первое число: </label>
                         <!--Создаём форму ввода значения, которая принимает только числа (type="number")
-                        И может передавать введённое значение через аргумент name (name="firstNum")
-                        Хочу подчеркнуть, что значение аргумента name ДОЛЖНО ПОЛНОСТЬЮ СОВПАДАТЬ с принемаемым методом обработки именем аргумента
-                        Как в данном примере: Метод обработки принимает 2 аргумента OnPostExampleMethod(int? firstNum, int? secondNum),
-                        Форма отправляет 2 аргумента с теми же именами-->
+                    И может передавать введённое значение через аргумент name (name="firstNum")
+                    Хочу подчеркнуть, что значение аргумента name ДОЛЖНО ПОЛНОСТЬЮ СОВПАДАТЬ с принемаемым методом обработки именем аргумента
+                    Как в данном примере: Метод обработки принимает 2 аргумента OnPostExampleMethod(int? firstNum, int? secondNum),
+                    Форма отправляет 2 аргумента с теми же именами-->
                         <input type="number" name="firstNum" />
                     </div>
                     <!--Создаём вторую колонку, без указания размера и выравниванием текста по правой стороне-->
@@ -52,8 +56,39 @@
         </div>
 
         @*Paste the all logic here!*@
+        <div class="alert alert-info">
+            <p>
+                <h5 class="text-center">Задание #2</h5>
+                Написать программу, которая будет принимать из 2-х полей для ввода 2 числа типа <span class="text-danger">sbyte</span>, складывать их и возвращать ответ в <span class="text-danger">sbyte</span>.<br />
+                После этого в одно поле ввести число 127, во второе 1. Проанализировать результат и объяснить, почему именно такой результат в итоге получился.
+            </p>
 
-        Paste the view HTML code here
+            <form method="post" asp-page-handler="AdditionSbyteMethod" class="form-group">
+                <div class="row">
+                    <div class="col text-left">
+                        <label class="col-form-label mr-2">Введите первое число: </label>
+                        <input type="number" name="firstNum" />
+                    </div>
+                    <div class="col text-right">
+                        <label class="col-form-label mr-2">Введите второе число: </label>
+                        <input type="number" name="secondNum" />
+                    </div>
+                </div>
+                <button type="submit" class="btn btn-success">Submit</button>
+            </form>
+            @if (Model.Answer != null && Model.Answer is sbyte)
+            {
+                <div class="jumbotron text-center">
+                    Answer is: @Model.Answer , this type is: @Model.Answer.GetType();
+                </div>
+            }
+            @if (Model.StackOverflowCheck)
+            {
+                <div class="alert alert-info">
+                    <p> Произошло переполнение стека </p>
+                </div>
+            }
+        </div>
 
         @*-------------------------------------------*@
     </div>
