Added completed task #3

--- a/Lesson_1_Strings/Pages/Numbers/Numbers.cshtml
+++ b/Lesson_1_Strings/Pages/Numbers/Numbers.cshtml
@@ -55,7 +55,7 @@
             }
         </div>
 
-        @*Paste the all logic here!*@
+        @*Paste the task 2*@
         <div class="alert alert-info">
             <p>
                 <h5 class="text-center">Задание #2</h5>
@@ -77,6 +77,41 @@
                 <button type="submit" class="btn btn-success">Submit</button>
             </form>
             @if (Model.Answer != null && Model.Answer is sbyte)
+            {
+                <div class="jumbotron text-center">
+                    Answer is: @Model.Answer , this type is: @Model.Answer.GetType();
+                </div>
+            }
+            @if (Model.StackOverflowCheck)
+            {
+                <div class="alert alert-info">
+                    <p> Произошло переполнение стека </p>
+                </div>
+            }
+        </div>
+        @*Paste the task 3*@
+        <div class="alert alert-info">
+            <p>
+                <h5 class="text-center">Задание #3</h5>
+                Написать программу, которая будет принимать из 2-х полей для ввода 2 числа типа <span class="text-danger">decimal</span>, складывать их и возвращать ответ в <span class="text-danger">decimal</span>.<br />
+                Тип поля ввода должен быть text и потребуется привести все воходящие параметры в тип decimal, т.к. в метод обработки придёт тип string<br />
+                Тип decimal чаще всего используется для финансовых операций.
+            </p>
+
+            <form method="post" asp-page-handler="AdditionDecimalMethod" class="form-group">
+                <div class="row">
+                    <div class="col text-left">
+                        <label class="col-form-label mr-2">Введите первое число: </label>
+                        <input type="text" name="firstNum" />
+                    </div>
+                    <div class="col text-right">
+                        <label class="col-form-label mr-2">Введите второе число: </label>
+                        <input type="text" name="secondNum" />
+                    </div>
+                </div>
+                <button type="submit" class="btn btn-success">Submit</button>
+            </form>
+            @if (Model.Answer != null && Model.Answer is decimal)
             {
                 <div class="jumbotron text-center">
                     Answer is: @Model.Answer , this type is: @Model.Answer.GetType();
